--- a/Projet-Hex/.project
+++ b/Projet-Hex/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Hex</name>
+	<name>Projet-Hex</name>
 	<comment></comment>
 	<projects>
 	</projects>
